--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -32,7 +32,8 @@ h6 {
   font-size: 2rem;
 }
 
-.default-background, .about-background {
+.default-background,
+.about-background {
   min-height: 100vh;
   display: flex;
   align-items: center;
@@ -47,15 +48,20 @@ h6 {
 }
 
 .btn-yellow {
-  color: var(--mainYellow);
-  border-color: var(--mainYellow);
+  color: var(--mainYellow) !important;
+  border-color: var(--mainYellow) !important;
 }
 
 .btn-yellow:hover {
   background: var(--mainYellow);
-  color: var(--mainBrown)
+  color: var(--mainBrown) !important;
 }
 
 .footer {
   background: var(--mainBrown);
+}
+
+.menu,
+.contact {
+  background: var(--mainGrey);
 }
